# gpmap-tools

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  MANIFEST.in  README.md  RELEASE.md  TODO  TODO.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml  test_update.yml
cache/: README
datasets/: README.md
datasets/data/: f1u.pq  serine.pq
datasets/landscapes/: f1u.pq  serine.pq  smn1.pq
datasets/visualizations/: 5ss.relaxation_times.pq  f1u.relaxation_times.pq  trna.edges.npz
docs/: .buildinfo  GB1.ipynb  api.rst  conf.py  datasets.rst  evolution.rst  genindex.html  index.html  index.rst  inference.rst  installation.rst  objects.inv  quickstart.rst  requirements.txt  search.html  searchindex.js  serine_landscape.html  serine_landscape.ipynb  usage.rst  visualization.rst
docs/.doctrees/: index.doctree  serine_landscape.doctree
docs/.ipynb_checkpoints/: serine_landscape-checkpoint.ipynb
docs/_sources/: serine_landscape.ipynb.txt
docs/data/: GSE153897_Variant_frequency.csv  e_coli.9mer.counts.tsv  gb1.data.csv  parD_parE.csv  serine.csv
docs/source/: conf.py  index.rst
docs/usage/: 0_discrete_spaces.ipynb  2_GB1.ipynb  3_VCregression.ipynb  4_SeqDEFT.ipynb  (+7 more)
gpmap/: aligner.py  base.py  datasets.py  genotypes.py  gp.py  graph.py  inference.py  kernel.py  likelihood.py  linalg.py  linop.py  matrix.py  mv.py  path.py  plot.py  plot_utils.py  randwalk.py  seq.py  seqdeft.py  settings.py  space.py  td.py  utils.py  visualization.py
test/: test_aligner.py  test_datasets.py  test_genotypes.py  test_gp.py  test_graph.py  test_inference.py  test_kernel.py  test_linalg.py  test_linops.py  test_matrix.py  test_mei.py  test_plots.py  test_randwalk.py  test_seq.py  test_seqdeft.py  test_space.py  test_td.py  test_utils.py  test_vc.py  test_visualization.py
(+135 files in other folders)
